fixed text alignment

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-h1, h2 {
+h1, h2, .inner p, .inner h2 {
     text-align: center;
 }
 
